# tiago-docker

./: .gitignore  README.md  docker-compose.yml  install.sh
install/gazebo/: gui.ini
install/skel/: .bashrc  .ros_profile
workspace/: Dockerfile  entrypoint.sh  pythonr  sshd_config
workspace/tiago_public_ws/src/custom_end_effector/: README.md
workspace/tiago_public_ws/src/custom_end_effector/custom_dual_ee_configuration/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/custom_end_effector/custom_dual_ee_description/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/custom_end_effector/custom_ee_configuration/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/custom_end_effector/custom_ee_description/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/custom_end_effector/custom_ee_description/urdf/: end-effector.urdf.xacro
workspace/tiago_public_ws/src/custom_end_effector/moveit_custom_config/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/custom_end_effector/moveit_custom_config/config/srdf/: tiago_custom.srdf
workspace/tiago_public_ws/src/custom_end_effector/moveit_custom_dual_config/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/dynamic_introspection/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/dynamic_introspection/src/: dynamic_introspection_utils.cpp
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_dev/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_ros_control/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/gazebo_ros_pkgs/gazebo_ros_pkgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_gazebo_plugins/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_hardware_gazebo/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_hardware_interfaces/: CHANGELOG.rst
workspace/tiago_public_ws/src/pal_msgs/pal_behaviour_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_common_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_control_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_device_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_interaction_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_motion_model_msgs/: CHANGELOG.rst  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_web_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/pal_msgs/pal_web_msgs/msg/: WebGoTo.msg
workspace/tiago_public_ws/src/robot_pose/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/robot_pose/launch/: fake_odom.launch  robot_pose.launch
workspace/tiago_public_ws/src/robot_pose/src/: fake_odom_publisher.cpp  pose_publisher.cpp
workspace/tiago_public_ws/src/robot_pose/test/: fake_odom.test  ground_truth_odom.bag  gtest_fake_odom.cpp  gtest_robot_pose.cpp  robot_pose.test
workspace/tiago_public_ws/src/roboticsgroup_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt
workspace/tiago_public_ws/src/ros_control/rqt_controller_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/ros_controllers/actuator_state_controller/: CHANGELOG.rst  CMakeLists.txt  actuator_state_controller.launch  actuator_state_controller.yaml  actuator_state_plugin.xml  package.xml
workspace/tiago_public_ws/src/ros_controllers/actuator_state_controller/include/actuator_state_controller/: actuator_state_controller.h
workspace/tiago_public_ws/src/ros_controllers/actuator_state_controller/src/: actuator_state_controller.cpp
workspace/tiago_public_ws/src/ros_controllers/actuator_state_controller/test/: actuator_state_controller.test  actuator_state_controller_ko.yaml  actuator_state_controller_ok.yaml  actuator_state_controller_test.cpp
workspace/tiago_public_ws/src/simple_models_robot/simple_models_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/simple_models_robot/simple_models_description/robots/: robot.urdf.xacro  upload.launch
workspace/tiago_public_ws/src/simple_models_robot/simple_models_description/test/: CMakeLists.txt  upload.test
workspace/tiago_public_ws/src/simple_models_robot/simple_models_description/urdf/: box.urdf.xacro  four_link_chain.urdf.xacro  four_link_star.urdf.xacro  gazebo.urdf.xacro  pendulum.urdf.xacro  sensors.urdf.xacro  simple_pmb2.urdf.xacro  simple_stockbot.urdf.xacro  sphere.urdf.xacro  stockbot_sensors.urdf.xacro
workspace/tiago_public_ws/src/simple_models_robot/simple_models_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/simple_models_robot/simple_models_gazebo/include/simple_models_gazebo/: gazebo_diff_drive.h  gazebo_diff_drive_plugin.h  gazebo_force_control.h  gazebo_four_wheel_diff_drive_plugin.h  gazebo_zero_wheel_vel.h
workspace/tiago_public_ws/src/simple_models_robot/simple_models_gazebo/launch/: simple_models_spawn.launch
workspace/tiago_public_ws/src/simple_models_robot/simple_models_gazebo/src/: gazebo_diff_drive.cpp  gazebo_diff_drive_plugin.cpp  gazebo_force_control.cpp  gazebo_four_wheel_diff_drive_plugin.cpp  gazebo_zero_wheel_vel.cpp
workspace/tiago_public_ws/src/simple_models_robot/simple_models_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/teleop_tools/joy_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
workspace/tiago_public_ws/src/teleop_tools/joy_teleop/include/joy_teleop/: incrementer_server.h
workspace/tiago_public_ws/src/teleop_tools/joy_teleop/src/: incrementer_server.cpp
(+210 files in other folders)
