<?xml version="1.0"?>
<package>
  <name>simple_models_robot</name>
  <version>0.0.31</version>
  <description>Description and controller configuration of TIAGo</description>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>simple_models_description</run_depend>
  <run_depend>simple_models_controller_configuration</run_depend>
  <run_depend>simple_models_gazebo</run_depend>

  <export>
     <metapackage/>
  </export>

</package>
